@@ -29,6 +29,7 @@ License for more details.
 
 /* #include "include.h" */
 #include "ext_sym.h"
+#include <string.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <sys/types.h>
@@ -83,7 +84,7 @@ char *symfile;
  if (!(symin=fopen(symfile,"r")))
    {perror(symfile);exit(1);};
  if(!fread((char *)&tab,sizeof(tab),1,symin))
-   FEerror("No header",0,0);
+   FEerror("No header",0);
  symbols=malloc(tab.tot_leng);
  c_table.alloc_length=( (PTABLE_EXTRA+ tab.n_symbols));
  (c_table.ptable) = (TABL *) malloc(sizeof(struct node) * c_table.alloc_length);
@@ -303,7 +304,7 @@ fasload(faslfile)
    
    relocate_symbols(symbol_table,nsyms,file_h->e_shnum,&init_address);
    if (init_address < 0)
-     { FEerror(0,"Init address not found ");
+     { FEerror("Init address not found ",0);
      }
 
    { 
@@ -317,7 +318,7 @@ fasload(faslfile)
 	   {
 	     int index_to_relocate = shp->sh_info;
 	     if (symtab_index != shp->sh_link)
-	       FEerror("unexpected symbol table used");
+	       FEerror("unexpected symbol table used",0);
 	     the_start = start_address + section[index_to_relocate].start;
 	   }
 /*  	 else if (shp->sh_type == SHT_REL */
@@ -332,7 +333,7 @@ fasload(faslfile)
 	 else if ( (shp->sh_type == SHT_REL) || (shp->sh_type == SHT_RELA) )
 	   {  if (get_section_number(".rel.stab") == j)
 	         continue;
-	     FEerror("unknown rel type");
+	     FEerror("unknown rel type",0);
 	   }
 	 else
 	   continue;
@@ -520,7 +521,7 @@ Elf32_Word sh_type;
     else if (sh_type == SHT_REL)
       a = 0;
     else {
-      FEerror("relocate() error: unknown sh_type in ELF object");
+      FEerror("relocate() error: unknown sh_type in ELF object",0);
       a=0;
     }
     b = (unsigned int) the_start;
@@ -542,7 +543,7 @@ Elf32_Word sh_type;
     switch(ELF32_R_TYPE(reloc_info->r_info)){
 #if (defined(__svr4__) || defined(__linux__)) && defined(__i386__)
     case     R_386_NONE:
-      FEerror("Unsupported ELF type R_386_NONE");
+      FEerror("Unsupported ELF type R_386_NONE",0);
       break;
 
     case     R_386_32:
@@ -556,40 +557,40 @@ Elf32_Word sh_type;
       break;
 
     case     R_386_GOT32:
-      FEerror("Unsupported ELF type R_386_GOY32");
+      FEerror("Unsupported ELF type R_386_GOY32",0);
       break;
 
     case     R_386_PLT32:
-      FEerror("Unsupported ELF type R_386_PLT32");
+      FEerror("Unsupported ELF type R_386_PLT32",0);
       break;
 
     case     R_386_COPY:
-      FEerror("Unsupported ELF type R_386_COPY");
+      FEerror("Unsupported ELF type R_386_COPY",0);
       break;
 
     case     R_386_GLOB_DAT:
-      FEerror("Unsupported ELF type R_386_GLOB_DAT");
+      FEerror("Unsupported ELF type R_386_GLOB_DAT",0);
       break;
 
     case     R_386_JMP_SLOT:
-      FEerror("Unsupported ELF type R_386_JMP_SLOT");
+      FEerror("Unsupported ELF type R_386_JMP_SLOT",0);
       break;
 
     case     R_386_RELATIVE:
-      FEerror("Unsupported ELF type R_386_RELATIVE");
+      FEerror("Unsupported ELF type R_386_RELATIVE",0);
       break;
 
     case     R_386_GOTOFF:
-      FEerror("Unsupported ELF type R_386_GOTOFF");
+      FEerror("Unsupported ELF type R_386_GOTOFF",0);
       break;
 
     case     R_386_GOTPC:
-      FEerror("Unsupported ELF type R_386_GOTPC");
+      FEerror("Unsupported ELF type R_386_GOTPC",0);
       break;
 
 #ifdef R_386_NUM
     case     R_386_NUM:
-      FEerror("Unsupported ELF type R_386_NUM");
+      FEerror("Unsupported ELF type R_386_NUM",0);
       break;
 #endif
 
@@ -657,7 +658,7 @@ char *string;
 	  fflush(stdout);
 	}
     }
-  else{FEerror("symbol table not loaded",0,0);}
+  else{FEerror("symbol table not loaded",0);}
 }
 
 static void
